@@ -1,3 +1,8 @@
+2009-07-09  Wolfgang Sourdeau  <wsourdeau@inverse.ca>
+
+	* src/calendar/base/content/calendar-task-editing.js: check the
+	value of getSelectedCalendar() to avoid exceptions on null values.
+
 2009-07-08  Wolfgang Sourdeau  <wsourdeau@inverse.ca>
 
 	* src/calendar/base/src/calDavCalendar.js: webdav sync handler: we
